# sold

./: .gitignore  CMakeLists.txt  COPYING.RUNTIME  README.md  ehframe_builder.h  elf_binary.cc  elf_binary.h  fedora-latest.Dockerfile  hash.cc  hash.h  ldsoconf.cc  ldsoconf.h  mprotect_builder.cc  mprotect_builder.h  print_dtrela.cc  print_dynsymtab.cc  print_ehframe.cc  print_tls.cc  print_verneed.cc  print_version.cc  raw_write.h  relocation-list-up.sh  renamer_main.cc  run-docker-tests.sh  shdr_builder.cc  shdr_builder.h  sold.cc  sold.h  sold_main.cc  strtab_builder.cc  strtab_builder.h  symtab_builder.cc  symtab_builder.h  ubuntu18.04.Dockerfile  ubuntu20.04.Dockerfile  utils.cc  utils.h  version_builder.cc  version_builder.h
.github/workflows/: build.yml
feature_unit_tests/: exe.cc  run-all-tests.sh
feature_unit_tests/call_once-g++/: .gitignore  fuga.cc  hoge.cc  test.sh
feature_unit_tests/call_once-g++-aarch64/: test.sh
feature_unit_tests/dynamic_cast-g++/: lib.h
feature_unit_tests/dynamic_cast-g++-aarch64/: test.sh
feature_unit_tests/exception-g++/: hoge.cc  test.sh
feature_unit_tests/exception-g++-aarch64/: fuga.cc  fuga.h  hoge.h  test.sh
feature_unit_tests/exception-str-g++-aarch64/: fuga.cc  test.sh
feature_unit_tests/global-write-aarch64/: test.sh
feature_unit_tests/hello-g++/: test.sh
feature_unit_tests/hello-g++-aarch64/: test.sh
feature_unit_tests/hello-gcc/: .gitignore  test.sh
feature_unit_tests/hello-gcc-aarch64/: test.sh
feature_unit_tests/inheritance-g++/: test.sh
feature_unit_tests/inheritance-g++-aarch64/: lib.h  test.sh
feature_unit_tests/just-return-g++/: test.sh
feature_unit_tests/just-return-g++-aarch64/: test.sh
feature_unit_tests/just-return-gcc/: test.sh
feature_unit_tests/just-return-gcc-aarch64/: .gitignore  test.sh
feature_unit_tests/mprotect/: base.c  mprotect_check.h  test.sh
feature_unit_tests/mprotect-aarch64/: base.h  main.c  test.sh
feature_unit_tests/renamer/: use_fugafuga.c
feature_unit_tests/setjmp-gcc/: test.sh
feature_unit_tests/setjmp-gcc-aarch64/: .gitignore  test.sh
feature_unit_tests/simple-lib-g++/: main.cc  test.sh
feature_unit_tests/simple-lib-g++-aarch64/: test.sh
feature_unit_tests/simple-lib-gcc/: .gitignore  libmax.h  test.sh
feature_unit_tests/simple-lib-gcc-aarch64/: test.sh
feature_unit_tests/static-in-class-g++/: lib.cc  main.cc  test.sh
feature_unit_tests/static-in-class-g++-aarch64/: test.sh
feature_unit_tests/static-in-function-g++/: test.sh
feature_unit_tests/static-in-function-g++-aarch64/: lib.cc  test.sh
feature_unit_tests/stb_gnu_unique_tls/: .gitignore  test.sh
feature_unit_tests/stb_gnu_unique_tls-aarch64/: test.sh
feature_unit_tests/tls-bss-g++/: test.sh
feature_unit_tests/tls-bss-g++-aarch64/: test.sh
feature_unit_tests/tls-bss-gcc/: main.c  test.sh
feature_unit_tests/tls-bss-gcc-aarch64/: test.sh
feature_unit_tests/tls-conflict-aarch64/: main.cc  test.sh
feature_unit_tests/tls-dlopen-gcc/: .gitignore  lib.c  main.c  test.sh
feature_unit_tests/tls-dlopen-gcc-aarch64/: test.sh
feature_unit_tests/tls-gcc/: main.c  test.sh
feature_unit_tests/tls-gcc-aarch64/: test.sh
feature_unit_tests/tls-lib-gcc/: base.c  test.sh
feature_unit_tests/tls-lib-gcc-aarch64/: lib.c  test.sh
feature_unit_tests/tls-lib-gcc-without-base/: lib.h  test.sh
feature_unit_tests/tls-lib-gcc-without-base-aarch64/: base.c  lib.c  test.sh
feature_unit_tests/tls-multiple-lib-gcc/: test.sh
feature_unit_tests/tls-multiple-lib-gcc-aarch64/: base.h  base2.h  test.sh
feature_unit_tests/tls-multiple-module-g++/: .gitignore  fuga.cc  test.sh
feature_unit_tests/tls-multiple-module-g++-aarch64/: fuga.h  fugahoge.cc  test.sh
feature_unit_tests/tls-thread-g++/: test.sh
feature_unit_tests/tls-thread-g++-aarch64/: .gitignore  test.sh
feature_unit_tests/typeid-g++/: lib.h  main.cc  test.sh
feature_unit_tests/unique_ptr-aarch64/: .gitignore  main.cc  test.sh
feature_unit_tests/version-gcc/: .gitignore  test.sh  vertest1.c
feature_unit_tests/version-gcc-aarch64/: libmax2.def  test.sh  vertest2.c
libtorch_test/: CMakeLists.txt  torch_test.cc  torch_test.h  torch_test_main.cc  torch_test_main_dlopen.cc
pybind_test/: CMakeLists.txt  README.md  add.cc  numpy.cc  object.cc  test_soldout_modules.py
renamer_test/: .gitignore  fugafuga.c  hoge.c  test.sh
tests/: CMakeLists.txt  base.c  base.cc  base.h  exe.c  exe.cc  lib.c  lib.cc  lib.h  run-all-tests.sh  runtest.sh
tests/call_once-g++/: lib.cc  lib.h  main.cc  test.sh
tests/call_once-g++-aarch64/: test.sh
tests/dynamic_cast-g++/: main.cc  test.sh
tests/dynamic_cast-g++-aarch64/: lib.cc
tests/excepction-g++/: lib.cc  lib.h  main.cc
tests/exception-g++/: test.sh
tests/exception-g++-aarch64/: test.sh
tests/exception-str-g++-aarch64/: hoge.cc  main.cc  test.sh
tests/global-write-aarch64/: hoge.c  main.c  test.sh
tests/hello-g++/: test.sh
tests/hello-g++-aarch64/: .gitignore  test.sh
tests/hello-gcc/: hello.c  test.sh
tests/hello-gcc-aarch64/: test.sh
tests/inheritance-g++/: lib.cc  main.cc  test.sh
tests/inheritance-g++-aarch64/: lib.cc  lib.h  test.sh
tests/just-return-g++/: test.sh
tests/just-return-g++-aarch64/: test.sh
tests/just-return-gcc/: test.sh
tests/just-return-gcc-aarch64/: .gitignore  test.sh
tests/mprotect/: test.sh
tests/mprotect-aarch64/: .gitignore  mprotect_check.c  test.sh
tests/renamer/: mapping  test.sh
tests/setjmp-gcc/: .gitignore  hoge.c  hoge.h  lib.c  lib.h  main.c  test.sh
tests/setjmp-gcc-aarch64/: test.sh
tests/simple-lib-g++/: main.cc  test.sh
tests/simple-lib-g++-aarch64/: libmax.cc  test.sh
tests/simple-lib-gcc/: main.c  test.sh
tests/simple-lib-gcc-aarch64/: libmax.c  main.c  test.sh
tests/static-in-class-g++/: lib.h  test.sh
tests/static-in-class-g++-aarch64/: test.sh
tests/static-in-function-g++/: lib.cc  main.cc  test.sh
tests/static-in-function-g++-aarch64/: test.sh
tests/stb_gnu_unique_tls-aarch64/: test.sh  unique.cc
tools/: listup_duplicated_syms.py  resolve_addr.py  search-symbol.sh  tracer.cc
(+62 files in other folders)
